--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/stewards/templates/aristotle_mdr/helpers/paginated_organisation_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/stewards/templates/aristotle_mdr/helpers/paginated_organisation_list.html
@@ -16,7 +16,7 @@ Showing {{ page.paginator.count }} results.
 <table class="table">
 <thead>
     <tr>
-        <th>{% trans 'Workgroup' %}
+        <th>{% trans 'Organisation' %}
             {% if sort == "name_asc" %}
             <a href="?{% paginator_get request page.number pop='sort' %}&sort=name_desc"><i class="fa fa-sort-asc"></i></a>
             {% elif sort == "name_desc" %}
