--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userAdminTools.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userAdminTools.html
@@ -44,7 +44,7 @@
           <i class="fa fa-fw fa-institution" aria-hidden="true"></i>
           Manage Registration Authorities
         </a>
-        <a class="list-group-item" href="{% url 'aristotle_mdr:stewards:view_all' %}">
+        <a class="list-group-item" href="{% url 'aristotle_mdr:stewards:group:list_all' %}">
           <i class="fa fa-fw fa-sitemap" aria-hidden="true"></i>
           Manage Stewardship Organisations
         </a>
