--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/stewards/templates/aristotle_mdr/user/organisations/list_all.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/stewards/templates/aristotle_mdr/user/organisations/list_all.html
@@ -13,7 +13,7 @@
 <h1>{% block title %}All Stewardship Organisations{% endblock %}</h1>
 
     <section id="workgroups">
-        <a class="btn btn-default" href="{% url 'aristotle:workgroup_create'%}">Add New Workgroup</a>
+        <a class="btn btn-default" href="{% url 'aristotle:workgroup_create'%}">Add Organisation</a>
         
         {% include "aristotle_mdr/helpers/paginated_organisation_list.html" with page=page show_all=True show_stewardship_organisations=True %}
 </section>
