--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -45,6 +45,7 @@
             {% block includes %}{% endblock %}
             {% endcomment %}
 
+            <dt class="">{% trans 'Stewardship Organisation'%}</dt> <dd class="">{{ item.stewardship_organisation }}</dd>
             {% if item.registerable %}
             {% include "aristotle_mdr/infobox_statuses.html" with statuses=statuses %}
             {% endif %}
