Update view history time

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -58,7 +58,7 @@
                         {{ view.concept }}
                         <small>({{ view.concept.item.get_verbose_name }})</small>
                         <br>
-                        <small>{{view.view_date|naturaltime}}</small>
+                        <small><time datetime="{{ view.view_date|isotime }}" data-time-from="true">{{ view.view_date }}</time></small>
                       </a>
 
                     {% empty %}
