Replace date_effective and due_date

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/reviews/review/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/reviews/review/base.html
@@ -54,7 +54,7 @@
             {% if review.due_date %}
             <br>
                 <i class="fa fa-fw fa-calendar"></i> Due date:
-                {{review.due_date}}
+                <time datetime="{{ review.due_date|isotime }}">{{ review.due_date }}</time>
             {% endif %}
             </div>
             </div>
