--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -101,7 +101,7 @@
                               <span title="{% trans 'The registration authority that applied this relationship' %}">
                                 {{ rel.registration_authority.name }}
                               </span>,
-                            {{ rel.date_effective }} -
+                            <time datetime="{{ rel.date_effective|isotime }}">{{ rel.date_effective }}</time> -
                             {{ rel.message }}
                             </li>
                           {% endfor %}
@@ -127,7 +127,7 @@
                               <span title="{% trans 'The registration authority that applied this relationship' %}">
                                 {{ rel.registration_authority.name }}
                               </span>,
-                            {{ rel.date_effective }}
+                            <time datetime="{{ rel.date_effective|isotime }}">{{ rel.date_effective }}</time>
                             {% if rel.message %} - {{ rel.message }} {% endif %}
                             </li>
                           {% endfor %}
